renaming environment variable to be able to define it as github action secret

--- a/src/.env.template
+++ b/src/.env.template
@@ -1,6 +1,6 @@
 # Can be created at https://github.com/settings/tokens
 # Only needed permission is `project`
-GITHUB_PROJECT_TOKEN="{GITHUB_PROJECT_TOKEN}"
+PROJECT_TOKEN="{PROJECT_TOKEN}"
 
 # Can be obtained by running the project (could be http://localhost:3000, or, if deployed, the URL of the deployed project)
 NEXTAUTH_URL="{PROJECT_URL}"
