renaming environment variable to be able to define it as github action secret

--- a/src/.env.template
+++ b/src/.env.template
@@ -9,5 +9,5 @@ NEXTAUTH_URL="{PROJECT_URL}"
 NEXTAUTH_SECRET="{TOKEN}"
 
 # Can be created at https://github.com/settings/developers
-GITHUB_ID="{GITHUB_APP_ID}"
+APP_ID="{APP_ID}"
 GITHUB_SECRET="{GITHUB_APP_SECRET}"
