renaming environment variable to be able to define it as github action secret

--- a/src/.env.template
+++ b/src/.env.template
@@ -10,4 +10,4 @@ NEXTAUTH_SECRET="{TOKEN}"
 
 # Can be created at https://github.com/settings/developers
 APP_ID="{APP_ID}"
-GITHUB_SECRET="{GITHUB_APP_SECRET}"
+APP_SECRET="{APP_SECRET}"
