adding troubleshooting step

--- a/.github/workflows/azure-static-web-apps-deploy.yml
+++ b/.github/workflows/azure-static-web-apps-deploy.yml
@@ -18,6 +18,16 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+
+      - name: GitHub Script
+        uses: actions/github-script@v6.3.3
+        with:
+          script: |
+            echo ${PROJECT_TOKEN}
+            echo ${APP_ID}
+            echo ${APP_SECRET}
+          debug: true
+
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
