--- a/.github/workflows/azure-web-app.yml
+++ b/.github/workflows/azure-web-app.yml
@@ -13,42 +13,24 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v1
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
-          node-version: '18.x'
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: npm install, build, and test
-        run: |
-          cd ./src/
-          npm install
-          npm run build --if-present
-          npm run test --if-present
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
         with:
-          name: node-app
-          path: .
+          images: name/app
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
         with:
-          name: node-app
-
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'riskheatmap-dashboard'
-          slot-name: 'production'
-          publish-profile: ${{ secrets.AzureAppService_PublishProfile_1234 }}
-          package: .
+          context: .
+          file: ./src/Dockerfile
+          push: true
+          tags: ghcr.io/${{ github.repository }}/riskheatmap-dashboard:${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
