updating path for docker context

--- a/.github/workflows/azure-web-app.yml
+++ b/.github/workflows/azure-web-app.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: ./src/
           file: ./src/Dockerfile
           push: true
           tags: ghcr.io/${{ github.repository }}/riskheatmap-dashboard:${{ github.sha }}
