--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,14 @@
 {
   "name": "RiskHeatmapDevEnvironment",
-  "image": "mcr.microsoft.com/devcontainers/base:bullseye"
+  "image": "mcr.microsoft.com/devcontainers/base:bullseye",
+  "features": {
+    "ghcr.io/devcontainers/features/azure-cli:1": {},
+    "ghcr.io/devcontainers/features/common-utils:2": {},
+    "ghcr.io/devcontainers/features/docker-from-docker:1": {},
+    "ghcr.io/devcontainers/features/github-cli:1": {},
+    "ghcr.io/devcontainers/features/node:1": {},
+    "ghcr.io/devcontainers-contrib/features/jest:1": {},
+    "ghcr.io/devcontainers-contrib/features/typescript:1": {},
+    "ghcr.io/eitsupi/devcontainer-features/jq-likes:1": {}
+  }
 }
