--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,5 +10,6 @@
     "ghcr.io/devcontainers-contrib/features/jest:1": {},
     "ghcr.io/devcontainers-contrib/features/typescript:1": {},
     "ghcr.io/eitsupi/devcontainer-features/jq-likes:1": {}
-  }
+  },
+  "forwardPorts": [ 3000 ]
 }
